package com.example.telestrations.ui;


import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;

import com.example.telestrations.R;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class ResultsScreen {

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Test
    public void resultsScreen() throws InterruptedException {
        ViewInteraction appCompatButton = onView(
                allOf(withId(R.id.hostGame), withText("Host Game"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                2),
                        isDisplayed()));
        appCompatButton.perform(click());

        //waiting for FB to create
        Thread.sleep(1200);

        ViewInteraction button = onView(
                allOf(withId(R.id.startGameBtn), withText("Start Game"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.activeFragment),
                                        0),
                                1),
                        isDisplayed()));
        button.perform(click());

        ViewInteraction editText = onView(
                allOf(withId(R.id.inputPhrase),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.gameActivityFragmentHolder),
                                        0),
                                1),
                        isDisplayed()));
        editText.perform(click());

        ViewInteraction editText2 = onView(
                allOf(withId(R.id.inputPhrase),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.gameActivityFragmentHolder),
                                        0),
                                1),
                        isDisplayed()));
        editText2.perform(replaceText("test"), closeSoftKeyboard());

        ViewInteraction button2 = onView(
                allOf(withId(R.id.submitPhrase), withText("Submit"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.gameActivityFragmentHolder),
                                        0),
                                2),
                        isDisplayed()));
        button2.perform(click());

        ViewInteraction textView = onView(
                allOf(withText("Here are the results for your word:"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.gameActivityFragmentHolder),
                                        0),
                                0),
                        isDisplayed()));
        textView.check(matches(withText("Here are the results for your word:")));

    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
